<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FarmerGameActivity">

    <Button
        android:id="@+id/self"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:onClick="selfbutton"
        android:text="@string/button_self"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="287dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/string_farmertakes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/wolf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="wolfbutton"
        android:text="@string/button_WOLF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/self" />

    <Button
        android:id="@+id/goat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="goatbutton"
        android:text="@string/button_goat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/wolf" />

    <Button
        android:id="@+id/cabbage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="cabbutton"
        android:text="@string/button_cabbage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/goat" />

    <Button
        android:id="@+id/solve1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="solvebutton"
        android:text="@string/button_solve"
        app:layout_constraintBottom_toTopOf="@+id/next1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="nextbutton"
        android:text="@string/button_next"
        app:layout_constraintBottom_toTopOf="@+id/reset"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reset"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="reset"
        android:text="@string/button_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/solvebox"
        android:layout_width="191dp"
        android:layout_height="125dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="170dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@android:style/TextAppearance.Holo.Small"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>